{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "3ad19387-eeb2-4848-8ca6-3afadce386e2",
            "actions": [
                {
                    "name": "MouseXY",
                    "type": "Value",
                    "id": "4b3a0d82-545a-4ff4-bb05-2a51524b2757",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "218465bb-32d5-463a-aba0-dd0accb0da01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDoubleClick",
                    "type": "Button",
                    "id": "d9436363-171f-4248-afca-40cf13926572",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap"
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "a7581608-5b17-4ccd-8e8a-80de795727cf",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "06f473fe-05b6-4877-ab16-23b15ecab5c6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseXY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0196744a-2831-4d2e-9770-bd6baad3e333",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d45f6ed-7da8-4033-9ba4-c18f06856214",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDoubleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55035abc-7c8e-4c1b-bcde-e4706612378b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "8374cc9c-900f-4906-9073-d287e2017b7c",
            "actions": [
                {
                    "name": "MoveCameraUp",
                    "type": "Button",
                    "id": "4acd0f3f-b47e-494e-90a7-37c5b89f315e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCameraDown",
                    "type": "Button",
                    "id": "a32aa7cf-d735-4e47-85d1-2f4fff4f9a3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCameraLeft",
                    "type": "Button",
                    "id": "6f56b887-9e63-4e42-94ef-04facf5168f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCameraRight",
                    "type": "Button",
                    "id": "c48c3ac6-79c9-42ee-9514-15db8ca87c71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCameraLeft",
                    "type": "Button",
                    "id": "8348575a-677d-40e7-b2b1-e8a448d7f303",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCameraRight",
                    "type": "Button",
                    "id": "78a97164-2357-4108-a759-bfce3aa3b3ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ZoomOut",
                    "type": "Button",
                    "id": "ba3601de-031e-406f-9b3d-673bf4215d2e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ZoomIn",
                    "type": "Button",
                    "id": "30e6f811-49fd-48b3-a1d7-fa1cf9135124",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ce368cf-3d58-4bce-8106-3d20a5c6ee59",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45487597-1c98-426b-936e-e3722acca94c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70c8a466-63ef-4c92-b342-288736600610",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "504d36ac-0501-4748-9493-06bfcd861e8b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db4d78f6-4cd0-4459-a5bd-b3d4f380ee92",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efb46589-f5ef-4c49-b558-126948e972d1",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de3ae54c-5d3f-4f96-a725-c8400a45d5c5",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6932a04-a8fc-429a-8c07-03eccc7c27d5",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TestingAbilities",
            "id": "de61b2b7-40ab-4100-9624-64df537df3be",
            "actions": [
                {
                    "name": "UseAbility",
                    "type": "Value",
                    "id": "4e235b85-06c4-449f-a726-756057990e39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDrag",
                    "type": "Button",
                    "id": "e06d238e-ec7b-4b26-bd98-fa1203412926",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67b7a6b4-3138-4159-81b9-be0331932d16",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7206ea5-95db-4615-8645-40d3a32d2f60",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlacementManager",
            "id": "aa886c8e-fe19-472a-a735-aaf82a771c04",
            "actions": [
                {
                    "name": "LeftCick",
                    "type": "Button",
                    "id": "690ef0fd-993f-4f06-9c49-5f7d169d3a11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Button",
                    "id": "e7c0fa22-19ac-4d22-840e-703991489294",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3bb74115-8516-427f-8ae4-04b09406cf1a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftCick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9385ceb4-f3b0-4487-89f3-a6385a006dd2",
                    "path": "<Mouse>/forwardButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}